--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -13,6 +13,7 @@ header-includes:
 library(tidyverse)
 library(ggplot2)
 library(splines)
+library(Matrix)
 ```
 
 
@@ -36,25 +37,30 @@ set.seed(0)
 n <- 300
 m <- 20
 p <- 50
-r <- 30
+r <- 500
 b <- 20
 
-X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)     #add intercept term in X
-true_B <- matrix(0, nrow = p+1, ncol = m) 
-nonzero_row <- sample(1:(p+1), size = r, replace = TRUE)
-nonzero_col <- c(1:m, sample(1:m, size = r - m, replace = TRUE))
-for(i in 1:r) {true_B[nonzero_row[i], nonzero_col[i]] = rnorm(n = 1, mean = 3, sd = 1)}
+X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
+sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = r)             # make sparse matrix
+LR_mat <- matrix(rnorm(m*(p+1), mean = 0, sd = 1), ncol = m)      # make low rank matrix using SVD
+SVD <- svd(LR_mat)
+D_mat <- diag(SVD$d)
+idx <- sample(1:m, m/2)
+D_mat[idx, idx] <- 0
+LR_mat <- SVD$u %*% D_mat %*% t(SVD$v)          
+
+true_B <- sp_mat + LR_mat            # B(tau) = sparse matrix + low rank matrix
 
 eps <- matrix(rnorm(n*m, mean = 0, sd = 0.1), nrow = n)
-tau <- 0.5
-true_B_tau <- true_B
-true_B_tau[1, ] <- true_B[1, ] + qnorm(tau, mean = 0, sd = 0.1)
-eps_tau <- eps - qnorm(tau, mean = 0, sd = 0.1)
+#tau <- 0.5
+#true_B_tau <- true_B
+#true_B_tau[1, ] <- true_B[1, ] + qnorm(tau, mean = 0, sd = 0.1)
+#eps_tau <- eps - qnorm(tau, mean = 0, sd = 0.1)
 
-Y <- X%*%true_B_tau + eps_tau
+Y <- X%*%true_B + eps
 ```
 
-$B(\tau)$는 각 열들을 기준으로 최소 1개의 non-zero entry, 하지만 특정 행에 대해서는 모두 0인 값을 가진다. 
+$B(\tau)$ = sparse matrix + low rank matrix
 
 
 #### Question
@@ -78,18 +84,12 @@ $$\rho_\tau(x) = (\tau - \mathbb{I}(x<0))x$$
 ### 1-2. Basis function
 
 ```{r}
-knot <- 10
-degree <- 3
-K <- knot + degree + 1 # the number of basis function
+K <- 15
 
 tau_seq <- seq(from = 0.25, to = 0.75, length.out = b) 
-Phi <- bs(tau_seq, df = K, intercept = TRUE)
+Phi <- bs(tau_seq, df = K, degree = 3, intercept = TRUE)
 ```
 
-
-#### Questions
-  1. tau seq 이렇게 설정하는게 맞나?
-  2. degree of freedom 설정
 
 $$\begin{aligned}\boldsymbol{v}_i^{(\ell)} &= (\boldsymbol{x}_i \otimes \Phi(\tau_{\ell}))^T\\ &=(\Phi(\tau_\ell)^T, x_{i1}\Phi(\tau_\ell)^T, \dots, x_{ip}\Phi(\tau_\ell)^T) \\ &\in \mathbb{R}^{(p+1)K}\end{aligned}$$
 
