--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -27,7 +27,7 @@ $$\begin{aligned}\beta_0(\tau) &= \beta_0 + Q_\tau(\epsilon) \\ \epsilon(\tau) &
  * n : # of observation. 
  * m : # of group. 
  * p : # of covariate. 
- * r : nonzero entry in true $B(\tau)$
+ * r : nonzero entry in true $\Gamma(\tau)$
  * K : # of basis function.
  * b : # of regional quantiel we consider.
  
@@ -36,14 +36,14 @@ For toy example, I will use n = 300, p = 50, g = 20.
 ```{r}
 set.seed(0)
 n <- 300
-m <- 20
-p <- 50
-r <- 500
-b <- 21
+m <- 15
+p <- 20
+num_nz <- round((p+1)*m*(2/3)) 
+b <- 6
 num_rank <- 5
 
 X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
-sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = r)             # make sparse matrix
+sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = num_nz)             # make sparse matrix
 LR_mat <- matrix(rnorm(m*(p+1), mean = 0, sd = 1), ncol = m)      # make low rank matrix using SVD
 SVD <- svd(LR_mat)
 D_mat <- diag(SVD$d)
@@ -59,12 +59,6 @@ Y <- X%*%true_B + eps
 ```
 
 $B(\tau)$ = sparse matrix + low rank matrix
-
-
-#### Question
-
- 1. Y를 generate할 때, 사용하는 $B(\tau)$ 값에 tau depend? 
- 2. 우선 $\tau = 0.5$ 로 generate 시켰는데, 이렇게 하는게 맞나? 
 
 # 1. Preliminary
  
@@ -86,6 +80,8 @@ K <- 15
 
 tau_seq <- seq(from = 0.4, to = 0.6, length.out = b) 
 Phi <- bs(tau_seq, df = K, degree = 3, intercept = TRUE)
+
+attr(Phi, "knots")
 ```
 
 
@@ -117,7 +113,7 @@ $$\boldsymbol{\eta}^{(g)}, \boldsymbol{\theta}^{(g)}, \boldsymbol{w}^{(g)}\in \m
 
 
 ```{r}
-eta_old <- matrix(0, nrow = (p+1)*K, ncol = m) 
+eta_old <- matrix(1, nrow = (p+1)*K, ncol = m) 
 theta_old <- eta_old
 alpha_old <- matrix(0, nrow = p+1, ncol = m)
 Z_old <- X %*% alpha_old
@@ -137,11 +133,11 @@ w_old <- matrix(0, nrow = (p+1)*K, ncol = m)
 $$\begin{aligned}\boldsymbol{Y}&=\boldsymbol{XA}+\boldsymbol{X\Gamma}(\tau)\\&=\boldsymbol{Z}+\boldsymbol{V}_{\tau_\ell}\boldsymbol{\Theta}\end{aligned}$$
 
 ```{r echo = TRUE, results = "hide"}
-max_iter <- 50
-delta <- 5
-lambda_1 <- 15          #low rank penalty
-lambda_2 <- 28           #sparse penalty
-tol_error <- 10
+max_iter <- 100
+delta <- 0.25
+lambda_1 <- 0.1          #low rank penalty
+lambda_2 <- 2           #sparse penalty
+tol_error <- 5
 iter_error <- matrix(ncol = 6, nrow = max_iter) %>%
   `colnames<-`(value = c("eta", "theta", "alpha", "e", "u", "w"))
 
@@ -160,7 +156,6 @@ for(iter in 1:max_iter){
   
   # Process for theta
   theta_new <- matrix(nrow = (p+1)*K, ncol = m)
-  threshold <- lambda_2/delta
   for (g in 1:m) {
     r_g <- eta_new[, g] - w_old[, g]/delta
     value <- 1 - (lambda_2/(delta * abs(r_g)))
@@ -184,9 +179,9 @@ for(iter in 1:max_iter){
     for(g in 1:m) {
      error <- Y[, g] - Z_new[, g] - V[[l]] %*% eta_new[, g]   #error = Y - XA - VH
      value <- error + u_old[[l]][, g]/delta
-     e_new[[l]][, g] <- case_when(value > tau_seq[l]/delta ~ value - tau_seq[l]/delta, 
-                                  value < (tau_seq[l]-1)/delta ~ value - (tau_seq[l]-1)/delta, 
-                                  value >=(tau_seq[l]-1)/delta & value <= tau_seq[l]/delta ~ 0)
+     e_new[[l]][, g] <- case_when(value > tau_seq[l]/(n*delta) ~ value - tau_seq[l]/(n*delta), 
+                                  value < (tau_seq[l]-1)/(n*delta) ~ value - (tau_seq[l]-1)/(n*delta), 
+                                  value >=(tau_seq[l]-1)/(n*delta) & value <= tau_seq[l]/(n*delta) ~ 0)
     }
   }
   
@@ -208,7 +203,7 @@ for(iter in 1:max_iter){
   iter_error[iter, "u"] <- lapply(u_diff, FUN = function(x) Matrix::norm(x, type = "F")) %>% Reduce("+", .)
   iter_error[iter, "w"] <- Matrix::norm(w_old - w_new, type = "F")
   
-  #if(iter_error[iter, ] < tol_error) break
+  if(sum(iter_error[iter, ]) < tol_error) break
   
   eta_old <- eta_new
   theta_old <- theta_new
@@ -229,7 +224,7 @@ $\lambda_1, \lambda_2, \delta$ 어떻게?
 ```{r}
 iter_error %>% data.frame %>%
   mutate(iter = 1:nrow(.)) %>%
-  filter(iter %in% 15:50) %>% 
+  filter(iter > 15) %>% 
   gather(key = "estimator", value = "value", -iter) %>%
   ggplot() +
   geom_line(aes(x = iter, y = value, group = estimator, color = estimator)) +
@@ -259,44 +254,43 @@ sing_val <- svd(alpha_new)$d
 sum(sing_val[1:5])/sum(sing_val)
 ```
 
-$$||A-\hat{A}||_F$$
-
 ```{r}
-(LR_mat - alpha_new) %>%
-  Matrix::norm(type = "F")
+rankMatrix(alpha_new)
 ```
+
 
 
 ### Sparse matrix
 
-$$||V_{\tau_\ell}\hat{\Theta}-X\Gamma(\tau)||_F$$
+$\hat{\Gamma}(\tau)=V_{\tau_\ell}\hat{\Theta}$
+
 
 ```{r}
-lapply(V, FUN = function(x) ((x %*% theta_new) - X %*% sp_mat) %>% Matrix::norm(type = "F")) %>%
-  `names<-`(value = tau_seq) %>%
-  bind_cols %>% t() 
-```
-
-$X\hat{\Gamma}(\tau)=V_{\tau_\ell}\hat{\Theta}$
-
-$\hat{\Gamma}(\tau)=(X^TX)^{-1}X^TV_{\tau_\ell}\hat{\Theta}$
-
-```{r}
-gamma_tau_hat <- lapply(V, FUN = function(x) solve(t(X) %*% X) %*% t(X) %*% x %*% theta_new) %>%
-  `names<-`(value = tau_seq)
-lapply(gamma_tau_hat, FUN = function(x) (x - sp_mat) %>% Matrix::norm(type = "F")) %>%
-  bind_cols %>% t()
+gamma_tau_hat <- list()
+for(l in 1:b) {
+  phi_tau <- Phi[l, ]
+  gamma_tau_hat[[l]] <- matrix(nrow = (p+1), ncol = m)
+  for(i in 1:(p+1)) {
+    for(j in 1:m) {
+      theta_j_g <- theta_new[(1+(i-1)*15):(15*i), g]
+      gamma_tau_hat[[l]][i, j] <- theta_j_g %*% phi_tau
+    }
+  }
+}
 ```
 
 
 $\#\text{ of non-zero entry in }\Gamma(\tau)=500$
 
-$x<0.1^5$이면 0으로 간주.
-
 
 ### sparsity pattern check
 
-$$\begin{aligned}\text{common}&:=\text{zero index in }\Gamma(\tau)=\text{zero index in }\hat{\Gamma}(\tau)\\\text{diff}&:=\text{zero index in }\Gamma(\tau)\ne\text{zero index in }\hat{\Gamma}(\tau)\\\end{aligned}$$
+```{r}
+data.frame(c("TP", "FP"), c("FN", "TN")) %>% 
+  `rownames<-`(value = c("True:non_zero", "True:zero")) %>%
+  `colnames<-`(value = c("Est:non_zero", "Est:zero")) %>% pander
+```
+
 
 ```{r}
 num_zero <- which(sp_mat==0, arr.ind = TRUE) %>% nrow
@@ -304,25 +298,31 @@ print(paste0("The number of zero entry in sp_mat is ", num_zero))
 ```
 
 ```{r}
-check_sp_pattern <- function(true, est, tol = 0.1^5, idx = FALSE) {
-  # diff1 means that true = 0 but est != 0
-  # diff2 means that true != 0 but est = 0
+check_sp_pattern <- function(true, est, tol = 0.1^5, idx = FALSE, nnz = num_nz) {
   zero_idx_true <- which(abs(true) < tol, arr.ind = TRUE) %>% as_tibble
   zero_idx_est <- which(abs(est) < tol, arr.ind = TRUE) %>% as_tibble
-  common <- semi_join(zero_idx_true, zero_idx_est, by = c("row", "col"))
-  diff_1 <- anti_join(zero_idx_true, zero_idx_est, by = c("row", "col"))
-  diff_2 <- anti_join(zero_idx_est, zero_idx_true, by = c("row", "col"))
-  if(idx == FALSE) {return(data.frame(diff1 = nrow(diff_1), common = nrow(common), diff2 = nrow(diff_2)))
-    } else {return(list(common = common, diff = diff))}
+  TN <- semi_join(zero_idx_true, zero_idx_est, by = c("row", "col"))
+  FP <- anti_join(zero_idx_true, zero_idx_est, by = c("row", "col"))
+  FN <- anti_join(zero_idx_est, zero_idx_true, by = c("row", "col"))
+  if(idx == FALSE) {return(data.frame(Positive = c(nnz - nrow(FN), nrow(FP)), Negative = c(nrow(FN), nrow(TN))) %>%
+                             `rownames<-`(value = c("Positive", "Negative")))
+    } else {return(list(TN = TN, FP = FP, FN = FN))}
 }
 ```
 
 
-```{r}
-gamma_tau_hat %>%
-  lapply(FUN = function(x) check_sp_pattern(true = sp_mat, est = x)) %>%
-  bind_rows(.id = "tau") %>%
-  mutate(accuracy = common/num_zero)
+```{r eval = FALSE}
+ROC_table <- list()
+tol_error_seq <- c(seq(from = 0, to = 1, by = 0.05))
+for(idx in 1:length(tol_error_seq)) {
+  ROC_table[[idx]] <- check_sp_pattern(true = sp_mat, est = gamma_tau_hat[[1]], tol = tol_error_seq[[idx]])
+}
+
+ROC_table %>%
+  lapply(FUN = function(x) data.frame(FP_rate = x[2, 1]/num_zero, TP_rate = x[1, 1]/num_nz)) %>%
+  bind_rows %>%
+  ggplot() +
+  geom_line(aes(x = FP_rate, y = TP_rate))
 ```
 
 
