--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -14,6 +14,7 @@ library(ggplot2)
 library(splines)
 library(Matrix)
 library(pander)
+library(gridExtra)
 ```
 
 
@@ -33,22 +34,23 @@ $$\begin{aligned}\beta_0(\tau) &= \beta_0 + Q_\tau(\epsilon) \\ \epsilon(\tau) &
 For toy example, I will use n = 300, p = 50, g = 20.
 
 ```{r}
-set.seed(0)
+set.seed(1)
 n <- 300
 m <- 15
 p <- 20
-num_nz <- round((p+1)*m*(2/3)) 
+num_nz <- round((p+1)*m*(1/5)) 
 b <- 6
 num_rank <- 5
 
 X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
 
-row_idx <- sample(1:(p+1), size = num_nz, replace = TRUE)     # make sparse matrix following N(4, 1)
-col_idx <- sample(1:m, size = num_nz, replace = TRUE)
-rand.x <- rnorm(num_nz, mean = 4, sd = 1)
-sp_mat <- sparseMatrix(row_idx, col_idx, x = rand.x)
+sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = num_nz)             # make sparse matrix
+for(i in 1:(p+1)) {
+  for(j in 1:m) {
+    if(abs(sp_mat[i, j]) != 0) {sp_mat[i, j] <- rnorm(1, mean = 4, sd = 1)}
+  }
+}
 num_zero <- which(sp_mat==0, arr.ind = TRUE) %>% nrow
-num_nz <- (p+1)*m - num_zero
 
 LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 0.1), ncol = m) # make low rank matrix using SVD
 SVD <- svd(LR_mat)
@@ -63,6 +65,7 @@ eps <- matrix(rnorm(n*m, mean = 0, sd = 0.1), nrow = n)
 
 Y <- X%*%true_B + eps
 ```
+
 
 
 $B(\tau)$ = sparse matrix + low rank matrix
@@ -266,10 +269,10 @@ check_sp_table <- function(true, est, tol = 0.1^5, table = FALSE, nnz = num_nz, 
 
 
 ```{r}
-max_iter <- 50
-delta <- 0.5
-lambda_1 <- 0.15
-lambda_2 <- 2.5
+max_iter <- 100
+delta <- 0.1
+lambda_1 <- 0.2
+lambda_2 <- 0.35
 tol_error <- 0.1
 
 result <- add_decomp(delta, lambda_1, lambda_2, tol_error, max_iter)
@@ -352,9 +355,54 @@ data.frame(c("TP", "FP"), c("FN", "TN")) %>%
 
 
 ```{r}
-check_sp_table(true = sp_mat, est = gamma_tau_hat, table = FALSE)
+check_sp_table(true = sp_mat, est = gamma_tau_hat, table = FALSE, tol = 0.1^3)
 ```
 
+
+```{r}
+sp_heat <- data.frame(col = rep(1:m, each = (p+1)), 
+           row = rep(1:(p+1), m),
+           value = as.vector(sp_mat)) %>%
+  ggplot(aes(x = col, y = -row, fill = value)) +
+  geom_tile() +
+  scale_fill_gradient(low = "white", high = "blue") +
+  theme_bw() +
+  theme(axis.line = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(), 
+    axis.title.x = element_blank(), 
+    axis.text.x = element_blank(), 
+    axis.ticks.x = element_blank(), 
+    axis.title.y = element_blank(), 
+    axis.text.y = element_blank(), 
+    axis.ticks.y = element_blank()) +
+  ggtitle("sp_mat")
+
+gamma_heat <- data.frame(col = rep(1:m, each = (p+1)), 
+           row = rep(1:(p+1), m),
+           value = as.vector(gamma_tau_hat[[3]])) %>%
+  mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
+  ggplot(aes(x = col, y = -row, fill = value)) +
+  geom_tile() +
+  scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
+  theme_bw() +
+  theme(axis.line = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(), 
+    axis.title.x = element_blank(), 
+    axis.text.x = element_blank(), 
+    axis.ticks.x = element_blank(), 
+    axis.title.y = element_blank(), 
+    axis.text.y = element_blank(), 
+    axis.ticks.y = element_blank()) +
+  ggtitle(expression(Gamma~"("~tau[3]~")"))
+
+grid.arrange(sp_heat, gamma_heat, nrow = 1)
+```
 
 
 ### Frobenius norm ratio
@@ -396,11 +444,11 @@ lapply(alpha_hat, FUN = function(x) svd(x) %>% .$d) %>%
 ### ROC curve
 
 ```{r eval = FALSE}
-lamb_2_seq <- seq(from = 1, to = 5, by = 0.25)
+lamb_2_seq <- c(seq(from = 0.1, to = 0.65, by = 0.05), seq(0.7, 1, by = 0.1))
 simul <- list()
 
 for(idx in 1:length(lamb_2_seq)) {
-  simul[[idx]] <- add_decomp(delta = 0.5, lambda_1 = 0.2, lambda_2 = lamb_2_seq[idx], tol_error = 0.1, max_iter = 50)
+  simul[[idx]] <- add_decomp(delta = 0.1, lambda_1 = 0.2, lambda_2 = lamb_2_seq[idx], tol_error = 0.1, max_iter = 100)
   if((idx %% 2) == 1) print(paste0("iter = ", idx))
 }
 
@@ -440,11 +488,9 @@ ROC_table %>%
   geom_point(aes(x = FPR, y = TPR)) +
   geom_abline(intercept = 0, slope = 1) +
   coord_fixed(ratio = 1) +
-  ggtitle(label = expression(delta ~ " =0.25, "~lambda[1] ~ "=0.2, "~lambda[2] ~ "in (0.5, 1.5)")) +
+  ggtitle(label = expression(delta ~ " =0.1, "~lambda[1] ~ "=0.2, "~lambda[2] ~ "in (0.1, 1)")) +
   scale_y_continuous(limits = c(0, 1))
 ```
-
-
 
 
 
