--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -34,21 +34,27 @@ $$\begin{aligned}\beta_0(\tau) &= \beta_0 + Q_\tau(\epsilon) \\ \epsilon(\tau) &
 For toy example, I will use n = 300, p = 50, g = 20.
 
 ```{r}
-set.seed(1)
+set.seed(0)
 n <- 300
 m <- 15
 p <- 20
-num_nz <- round((p+1)*m*(1/5)) 
+num_nz <- 15   #round((p+1)*m*(1/5)) 
 b <- 6
 num_rank <- 5
 
 X <- matrix(rnorm(n*p, mean = 0, sd = 1), nrow = n) %>% cbind(1, .)   #add intercept term in X
 
-sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = num_nz)             # make sparse matrix
-for(i in 1:(p+1)) {
-  for(j in 1:m) {
-    if(abs(sp_mat[i, j]) != 0) {sp_mat[i, j] <- rnorm(1, mean = 4, sd = 1)}
-  }
+#sp_mat <- rsparsematrix(nrow = p+1, ncol = m, nnz = num_nz)             # make sparse matrix
+#for(i in 1:(p+1)) {
+  #for(j in 1:m) {
+    #if(abs(sp_mat[i, j]) != 0) {sp_mat[i, j] <- rnorm(1, mean = 5, sd = 0.1)}
+  #}
+#}
+col_ind <- sample(1:m, size = m, replace = FALSE)
+row_ind <- sample(1:(p+1), size = m)
+sp_mat <- matrix(0, nrow = p+1, ncol = m)
+for(i in 1:m) {
+  sp_mat[row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
 }
 num_zero <- which(sp_mat==0, arr.ind = TRUE) %>% nrow
 
@@ -65,7 +71,6 @@ eps <- matrix(rnorm(n*m, mean = 0, sd = 0.1), nrow = n)
 
 Y <- X%*%true_B + eps
 ```
-
 
 
 $B(\tau)$ = sparse matrix + low rank matrix
@@ -244,10 +249,10 @@ check_sp_table <- function(true, est, tol = 0.1^5, table = FALSE, nnz = num_nz, 
   # check sparsity pattern of true and est matrix
   zero_idx_true <- which(abs(true) < tol, arr.ind = TRUE) %>% as_tibble
   zero_idx_est <- lapply(est, FUN = function(x) which(abs(x) < tol, arr.ind = TRUE) %>% as_tibble) %>%
-    bind_rows %>%
-    split(., .$row) %>%
-    lapply(FUN = function(x) x$col %>% unique %>% tibble(col = .)) %>%
-    bind_rows(.id = "row") %>% mutate_all(as.numeric)
+    bind_rows (.id = "tau") %>%
+    group_by(row, col) %>%
+    summarise(zero = n()) %>%
+    filter(zero == b)
   
   if(nrow(zero_idx_est) == 0) {
     result <- data.frame(Positive = c(nnz, nz), Negative = c(0, 0))
@@ -266,13 +271,11 @@ check_sp_table <- function(true, est, tol = 0.1^5, table = FALSE, nnz = num_nz, 
 
 
 
-
-
 ```{r}
-max_iter <- 100
-delta <- 0.1
-lambda_1 <- 0.2
-lambda_2 <- 0.35
+max_iter <- 50
+delta <- 0.05
+lambda_1 <- 0.25
+lambda_2 <- 0.49
 tol_error <- 0.1
 
 result <- add_decomp(delta, lambda_1, lambda_2, tol_error, max_iter)
@@ -355,16 +358,16 @@ data.frame(c("TP", "FP"), c("FN", "TN")) %>%
 
 
 ```{r}
-check_sp_table(true = sp_mat, est = gamma_tau_hat, table = FALSE, tol = 0.1^3)
+check_sp_table(true = sp_mat, est = gamma_tau_hat, table = TRUE, tol = 0.1^3)
 ```
 
 
-```{r}
+```{r message = FALSE}
 sp_heat <- data.frame(col = rep(1:m, each = (p+1)), 
            row = rep(1:(p+1), m),
            value = as.vector(sp_mat)) %>%
   ggplot(aes(x = col, y = -row, fill = value)) +
-  geom_tile() +
+  geom_tile(color = "grey") +
   scale_fill_gradient(low = "white", high = "blue") +
   theme_bw() +
   theme(axis.line = element_blank(),
@@ -385,7 +388,7 @@ gamma_heat <- data.frame(col = rep(1:m, each = (p+1)),
            value = as.vector(gamma_tau_hat[[3]])) %>%
   mutate(value = ifelse(abs(value) < 0.1^5, 0, value)) %>%
   ggplot(aes(x = col, y = -row, fill = value)) +
-  geom_tile() +
+  geom_tile(color = "grey") +
   scale_fill_gradient2(low = "red",mid = "white", high = "blue") +
   theme_bw() +
   theme(axis.line = element_blank(),
@@ -401,8 +404,37 @@ gamma_heat <- data.frame(col = rep(1:m, each = (p+1)),
     axis.ticks.y = element_blank()) +
   ggtitle(expression(Gamma~"("~tau[3]~")"))
 
+
+common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
+                                                   row = rep(1:(p+1), m),
+                                                   value = as.vector(x))) %>%
+  `names<-`(tau_seq) %>%
+  bind_rows(.id = "tau") %>%
+  mutate(is_nonzero = ifelse(abs(value) < 0.1^5, 0, 1)) %>%
+  group_by(col, row) %>%
+  summarise(is_nonzero = mean(is_nonzero)) %>%
+  mutate(is_nonzero = ifelse(is_nonzero == 0, 0, 1) %>% as.character) %>%
+  ggplot(aes(x = col, y = -row, fill = is_nonzero)) +
+  geom_tile(color = "grey") +
+  scale_fill_manual(values = c("white", "black")) + 
+  theme_bw() +
+  theme(axis.line = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank(),
+    panel.background = element_blank(), 
+    axis.title.x = element_blank(), 
+    axis.text.x = element_blank(), 
+    axis.ticks.x = element_blank(), 
+    axis.title.y = element_blank(), 
+    axis.text.y = element_blank(), 
+    axis.ticks.y = element_blank()) +
+  ggtitle(expression("all of"~Gamma~"("~tau[l]~")"))
+
 grid.arrange(sp_heat, gamma_heat, nrow = 1)
+grid.arrange(sp_heat, common_zero_heat, nrow = 1)
 ```
+
 
 
 ### Frobenius norm ratio
@@ -432,6 +464,9 @@ alpha_hat %>%
   labs(title = expression("Frobenius norm ratio when "~delta~"=0.1, "~lambda[2]~"=0.5, "~lambda[1]~"in (0.05,0.3)"), 
        x = expression(lambda[1]))
 ```
+
+
+
 ```{r eval = FALSE}
 lapply(alpha_hat, FUN = function(x) svd(x) %>% .$d) %>%
   lapply(FUN = function(x) data.frame(ratio = (sum(x[1:num_rank])/sum(x)), rank = sum(abs(x) > 0.1^5))) %>%
@@ -444,11 +479,11 @@ lapply(alpha_hat, FUN = function(x) svd(x) %>% .$d) %>%
 ### ROC curve
 
 ```{r eval = FALSE}
-lamb_2_seq <- c(seq(from = 0.1, to = 0.65, by = 0.05), seq(0.7, 1, by = 0.1))
+lamb_2_seq <- c(seq(from = 0.1, to = 1.5, by =0.1), 1.75, 2)
 simul <- list()
 
 for(idx in 1:length(lamb_2_seq)) {
-  simul[[idx]] <- add_decomp(delta = 0.1, lambda_1 = 0.2, lambda_2 = lamb_2_seq[idx], tol_error = 0.1, max_iter = 100)
+  simul[[idx]] <- add_decomp(delta = 0.1, lambda_1 = 0.2, lambda_2 = lamb_2_seq[idx], tol_error = 0.1, max_iter = 50)
   if((idx %% 2) == 1) print(paste0("iter = ", idx))
 }
 
@@ -482,19 +517,31 @@ for(idx in 1:length(lamb_2_seq)) {
 ROC_table %>%
   `names<-`(value = lamb_2_seq) %>%
   bind_rows(.id = "lamb_2") %>%
+  #filter(!(lamb_2 %in% c(0.55, 0.575, 0.6, 0.7, 0.8, 0.9, 1))) %>%
   arrange(FPR, TPR) %>%
   ggplot() +
   geom_line(aes(x = FPR, y = TPR)) +
   geom_point(aes(x = FPR, y = TPR)) +
   geom_abline(intercept = 0, slope = 1) +
   coord_fixed(ratio = 1) +
-  ggtitle(label = expression(delta ~ " =0.1, "~lambda[1] ~ "=0.2, "~lambda[2] ~ "in (0.1, 1)")) +
+  ggtitle(label = expression(delta ~ " =0.1, "~lambda[1] ~ "=0.2, "~lambda[2] ~ "in (0.1, 1.5), max_iter = 50")) +
   scale_y_continuous(limits = c(0, 1))
 ```
 
 
 
+```{r}
+alpha_hat <- lapply(simul, FUN = function(x) x$alpha) 
 
+lapply(alpha_hat, FUN = function(x) data.frame(FR_ratio = norm(x - LR_mat, "F")/norm(LR_mat, "F"))) %>%
+  `names<-`(value = lamb_2_seq) %>%
+  bind_rows(.id = "lambda_2") %>%
+  mutate(lambda_2 = as.numeric(lambda_2)) %>%
+  ggplot() +
+  geom_line(aes(x = lambda_2, y = FR_ratio)) +
+  ggtitle(label = expression(delta ~ " =0.1, "~lambda[1] ~ "=0.2, "~lambda[2] ~ "in (0.1, 2), max_iter = 50"))+
+  coord_fixed(ratio = 2) 
+```
 
 
 
