--- a/Toy_Example.Rmd
+++ b/Toy_Example.Rmd
@@ -15,6 +15,8 @@ library(splines)
 library(Matrix)
 library(pander)
 library(gridExtra)
+library(foreach)
+library(doParallel)
 ```
 
 
@@ -38,7 +40,7 @@ set.seed(0)
 n <- 300
 m <- 15
 p <- 20
-num_nz <- 15   #round((p+1)*m*(1/5)) 
+#num_nz <- 15   #round((p+1)*m*(1/5)) 
 b <- 6
 num_rank <- 5
 
@@ -57,6 +59,7 @@ for(i in 1:m) {
   sp_mat[row_ind[i], col_ind[i]] <- rnorm(1, mean = 5, sd = 0.1)
 }
 num_zero <- which(sp_mat==0, arr.ind = TRUE) %>% nrow
+num_nz <- (m+1)*p - num_zero
 
 LR_mat <- matrix(rnorm((p+1)*m, mean = 1, sd = 0.1), ncol = m) # make low rank matrix using SVD
 SVD <- svd(LR_mat)
@@ -71,6 +74,7 @@ eps <- matrix(rnorm(n*m, mean = 0, sd = 0.1), nrow = n)
 
 Y <- X%*%true_B + eps
 ```
+
 
 
 $B(\tau)$ = sparse matrix + low rank matrix
@@ -154,37 +158,25 @@ add_decomp <- function(delta, lambda_1, lambda_2, tol_error, max_iter) {
   iter_error <- matrix(ncol = 6, nrow = max_iter) %>%
     `colnames<-`(value = c("eta", "theta", "alpha", "e", "u", "w"))
   
-  sum_V <- Reduce("+", V)
-  VV_prod <- lapply(V, FUN = function(x) t(x) %*% x)   # V^TV
-  sum_VV <- Reduce("+", VV_prod)
+  sum_V <- Sum_Mat(V)
+  VV_prod <- lapply(V, FUN = function(x) prod_AB(x, x, A_t = TRUE, B_t = FALSE))   # V^TV
+  sum_VV <- Sum_Mat(VV_prod)
   
   for(iter in 1:max_iter) {
     # Process for eta
     eta_new <- matrix(nrow = (p+1)*K, ncol = m)
-    Vu_prod <- mapply(function(x,y) t(x) %*% y, V, u_old, SIMPLIFY = FALSE)
-    Ve_prod <- mapply(function(x,y) t(x) %*% y, V, e_old, SIMPLIFY = FALSE)
-    eta_new <- (solve(sum_VV+diag(1, (p+1)*K))/delta) %*% (w_old + delta * theta_old + Reduce("+", Vu_prod)
-                                                           + delta * t(sum_V) %*% (Y - Z_old)
-                                                           - delta * Reduce("+", Ve_prod))
-    
+    Vu_prod <- mapply(function(x,y) prod_AB(x, y, A_t = TRUE, B_t = FALSE), V, u_old, SIMPLIFY = FALSE)
+    Ve_prod <- mapply(function(x,y) prod_AB(x, y, A_t = TRUE, B_t = FALSE), V, e_old, SIMPLIFY = FALSE)
+    eta_new <- update_eta(delta, sum_VV, W = w_old, Theta = theta_old, 
+                          sum_VU = Sum_Mat(Vu_prod), sum_V, Y, Z = Z_old, sum_VE = Sum_Mat(Ve_prod))
+
     # Process for theta
-    theta_new <- matrix(nrow = (p+1)*K, ncol = m)
-    for (g in 1:m) {
-      r_g <- eta_new[, g] - w_old[, g]/delta
-      value <- 1 - (lambda_2/(delta * abs(r_g)))
-      theta_new[, g] <- ifelse(value > 0, value * r_g, 0)
-    }
+    theta_new <- update_theta(delta, lambda_2, Eta = eta_new, W = w_old)
     
     # Process for Z=XA
-    Y_list <- list()
-    for(i in 1:l) {Y_list[[i]] <- Y}
-    VH_list <- lapply(V, FUN = function(x) x %*% eta_new)
-    obj_list <- mapply(function(Y, VH, E, U) Y - VH - E - U/delta, Y_list, VH_list, e_old, u_old, SIMPLIFY = FALSE)
-    obj <- Reduce("+", obj_list)/b 
-    SVD <- svd(obj)
-    new_singular <- sapply(SVD$d - lambda_1/(delta*b), FUN = function(x) max(x, 0))
-    Z_new <- SVD$u %*% diag(new_singular) %*% t(SVD$v)
-    alpha_new <- solve(t(X) %*% X) %*% t(X) %*% Z_new
+    sub_process <- update_alpha(delta, lambda_1, Y = Y, X = X, H = eta_new, V = V, E = e_old, U = u_old)
+    Z_new <- sub_process$Z_new
+    alpha_new <- sub_process$alpha_new
     
     # Process for e
     e_new <- list()
@@ -358,7 +350,7 @@ data.frame(c("TP", "FP"), c("FN", "TN")) %>%
 
 
 ```{r}
-check_sp_table(true = sp_mat, est = gamma_tau_hat, table = TRUE, tol = 0.1^3)
+check_sp_table(true = sp_mat, est = gamma_tau_hat, table = TRUE, tol = 0.1^5)
 ```
 
 
@@ -381,7 +373,8 @@ sp_heat <- data.frame(col = rep(1:m, each = (p+1)),
     axis.title.y = element_blank(), 
     axis.text.y = element_blank(), 
     axis.ticks.y = element_blank()) +
-  ggtitle("sp_mat")
+  ggtitle("sp_mat") +
+  coord_fixed(ratio = 1.3)
 
 gamma_heat <- data.frame(col = rep(1:m, each = (p+1)), 
            row = rep(1:(p+1), m),
@@ -402,7 +395,8 @@ gamma_heat <- data.frame(col = rep(1:m, each = (p+1)),
     axis.title.y = element_blank(), 
     axis.text.y = element_blank(), 
     axis.ticks.y = element_blank()) +
-  ggtitle(expression(Gamma~"("~tau[3]~")"))
+  ggtitle(expression(Gamma~"("~tau[3]~")")) +
+  coord_fixed(ratio = 1.3)
 
 
 common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep(1:m, each = (p+1)),
@@ -429,11 +423,29 @@ common_zero_heat <- lapply(gamma_tau_hat, FUN = function(x) data.frame(col = rep
     axis.title.y = element_blank(), 
     axis.text.y = element_blank(), 
     axis.ticks.y = element_blank()) +
-  ggtitle(expression("all of"~Gamma~"("~tau[l]~")"))
+  ggtitle(expression("all of"~Gamma~"("~tau[l]~")")) +
+  coord_fixed(ratio = 1.3)
 
 grid.arrange(sp_heat, gamma_heat, nrow = 1)
 grid.arrange(sp_heat, common_zero_heat, nrow = 1)
 ```
+
+
+```{r}
+est_sp <- gamma_tau_hat[[3]]
+for(i in 1:nrow(est_sp)) {
+  for(j in 1:ncol(est_sp)) {
+    est_sp[i, j] <- ifelse(est_sp[i, j] != 0, est_sp[i, j] + 4, est_sp[i, j])
+  }
+}
+
+beta_hat <- result$alpha + est_sp
+norm(beta_hat - true_B, "F")/norm(true_B, "F")
+
+Y_hat <- X %*% beta_hat
+norm(Y - Y_hat, "F")/norm(Y, "F")
+```
+
 
 
 
