--- a/CCLE.Rmd
+++ b/CCLE.Rmd
@@ -106,8 +106,8 @@ V <- calc_V(as.matrix(X), Phi)
 ```{r}
 max_iter <- 50
 delta <- 0.01
-lambda_1 <- 0.05
-lambda_2 <- 0.05
+lambda_1 <- 0.01
+lambda_2 <- 0.08
 tol_error <- 0.1
 
 start <- Sys.time()
@@ -117,6 +117,9 @@ end <- Sys.time()
 
 end - start
 ```
+
+
+
 ```{r}
 result$iter_error %>% 
   na.omit() %>%
@@ -142,8 +145,19 @@ gamma_hat <- est_gamma(Phi, result$theta)
 gamma_sing_val <- svd(gamma_hat[[3]]) %>% 
   .$d
 
-sum(gamma_sing_val[1:1])/sum(gamma_sing_val)
+sum(gamma_sing_val[1:3])/sum(gamma_sing_val)
 (gamma_sing_val > 0.1^5) %>% sum
+```
+
+```{r}
+gamma_hat %>% lapply(FUN = function(x) svd(x) %>% .$d %>% 
+                       data.frame(index = 1:m, sing_val = .)) %>%
+  `names<-`(value = tau_seq) %>%
+  bind_rows(.id = "tau") %>%
+  ggplot(aes(x = index, y = sing_val)) +
+  geom_point(aes(color = tau)) +
+  labs(title = expression("singular value in estimated"~Gamma~"("~tau~")")) +
+  coord_fixed(ratio = 1.5)
 ```
 
 
@@ -223,11 +237,11 @@ gamma_hat[[3]][idx_ex, ] %>% as(., "dgCMatrix") %>% round(2) %>%
 # various lambda_1
 
 ```{r}
-lamb_1_seq <- seq(from = 0.005, to = 0.1, by = 0.005)
+lamb_1_seq <- seq(from = 0, to = 0.05, by = 0.01) %>% c(seq(from = 0.1, to = 1, by = 0.1))
 simul_lamb1 <- list()
 
 for(idx in 1:length(lamb_1_seq)) {
-  simul_lamb1[[idx]] <- add_decomp(delta = 0.005, lambda_1 = lamb_1_seq[idx], lambda_2 = 0.2,
+  simul_lamb1[[idx]] <- add_decomp(delta = 0.01, lambda_1 = lamb_1_seq[idx], lambda_2 = 0.08,
                                    tol_error = 0.1, max_iter = 50, 
                                    X = as.matrix(X), Y = as.matrix(Y), V = V, Phi = Phi)
   if((idx %% 2) == 1) print(paste0("iter = ", idx))
@@ -238,14 +252,19 @@ for(idx in 1:length(lamb_1_seq)) {
 alpha_hat <- simul_lamb1 %>% lapply(FUN = function(x) x$alpha)
 
 lapply(alpha_hat, FUN = function(x) svd(x) %>% .$d) %>%
-  lapply(FUN = function(x) data.frame(ratio = (sum(x[1:3])/sum(x)), rank = sum(abs(x) > 0.1^5))) %>%
+  lapply(FUN = function(x) data.frame(ratio = (sum(x[1])/sum(x)), rank = sum(abs(x) > 0.1^5))) %>%
   `names<-`(value = lamb_1_seq) %>%
   bind_rows(.id = "lambda1")
 ```
 
 
 ```{r}
-alpha_col %>% lapply(FUN = function(x) data.frame(GENE = colnames(X), alpha_hat = x) %>% arrange(-alpha_hat)) %>% `names<-`(value = lamb_1_seq) %>% lapply(FUN = function(x) x[9, ]) %>% bind_rows(.id = "lambda_1")
+simul_lamb1 %>% lapply(FUN = function(x) x$theta %>% est_gamma(Phi = Phi, theta = .) %>% .[[3]]) %>%
+  lapply(FUN = function(x) svd(x) %>% .$d) %>%
+  lapply(FUN = function(x) data.frame(sigma_1 = x[1], sigma_2 = x[2], sigma_3 = x[3], 
+                                      ratio = sum(x[1:3])/sum(x))) %>%
+  `names<-`(value = lamb_1_seq) %>%
+  bind_rows(.id = "lambda_1")
 ```
 
 
